# atproto_oauth_authn

./: .gitignore  README.md  TODO.md  client-metadata.json.tmpl  main.py  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml  ruff.yml
docs/: oauth-notes.md
examples/: bluesky_social_auth.py  generate_jwk.py
src/atproto_oauth_authn/: __init__.py  authn.py  did.py  exceptions.py  identity.py  metadata.py  oauth.py  security.py  utils.py
tests/: conftest.py  test_did.py  test_identity.py  test_metadata.py  test_oauth.py  test_security.py  test_utils.py
