[project]
name = "atproto-oauth-authn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "atproto-oauth-authn",
]

[tool.uv.sources]
atproto-oauth-authn = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
