[project]
name = "atproto-oauth-authn"
version = "0.1.0"
description = "AT Protocol OAuth authentication client for Python"
readme = "README.md"
authors = [{name = "ecallen", email = "ethancallen@gmail.com"}]
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "authlib>=1.5.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "atproto-oauth-authn",
]

[tool.uv.sources]
atproto-oauth-authn = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


