[project]
name = "atproto-oauth-authn"
version = "0.1.0"
description = "AT Protocol OAuth authentication client for Python"
readme = "README.md"
authors = [{name = "ecallen", email = "ethancallen@gmail.com"}]
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "authlib>=1.5.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "joserfc>=1.3.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "requests>=2.32.4",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "atproto-oauth-authn",
    "pylint>=3.3.7",
]

[tool.uv.sources]
atproto-oauth-authn = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


